--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,12 @@
     "config": {
         "allow-plugins": {
             "composer/installers": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true,
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
+            "php-http/discovery": true,
             "phpstan/extension-installer": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true,
-            "php-http/discovery": true
+            "tbachert/spi": true
         },
         "sort-packages": true
     },
@@ -99,6 +100,6 @@
         "drupal/coder": "^8.3",
         "drupal/core-dev": "^10.2",
         "drupal/webprofiler": "^10.1",
-        "drush/drush": "^12.4"
+        "drush/drush": "^13.3"
     }
 }
