--- a/web/modules/custom/anytown/anytown.routing.yml
+++ b/web/modules/custom/anytown/anytown.routing.yml
@@ -19,3 +19,14 @@ anytown.weather_page:
   requirements:
     # What permissions a user needs to have in order to view this page.
     _permission: 'view weekly weather'
+
+# Settings form route.
+anytown.settings:
+  path: '/admin/config/system/anytown'
+  defaults:
+    _title: 'Anytown Settings'
+    # For form controllers use _form instead of _controller. This tells Drupal
+    # to use the build, validate, submit workflow for a form.
+    _form: 'Drupal\anytown\Form\SettingsForm'
+  requirements:
+    _permission: 'administer site configuration'
